syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.maynestream.ledgify.transaction";
option java_outer_classname = "TransactionProto";

import "buf/validate/validate.proto";

service TransactionLog {
  rpc SubmitTransaction(TransactionDetails) returns (Transaction);
  rpc CommitTransaction(TransactionCommit) returns (Transaction);

  rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);
}

message TransactionDetails {
  string description = 1 [(buf.validate.field).required = false, (buf.validate.field).string.max_len = 1000];
  string currency = 2 [(buf.validate.field).string.len = 3];
  string amount = 3 [(buf.validate.field) = {string: {pattern: "^[\\d]+[\\.]?[\\d]*$"}, ignore_empty: false}];
  string debit_account_id = 4 [(buf.validate.field).string.uuid = true];
  string credit_account_id = 5 [(buf.validate.field).string.uuid = true];
}

enum TransactionCommitStatus {
  PROPOSED = 0;
  PENDING = 1;
  COMPLETED = 2;
  FAILED = 3;
  UNKNOWN = 4;
}

message TransactionCommit {
  string transaction_id = 1 [(buf.validate.field).string.uuid = true];
  TransactionCommitState state = 2 [(buf.validate.field).required = true];
}

message TransactionCommitState {
  TransactionCommitStatus status = 1 [(buf.validate.field).required = true];
  string context = 2 [(buf.validate.field).required = false, (buf.validate.field).string.max_len = 1000];
}

message Transaction {
  string transaction_id = 1 [(buf.validate.field).string.uuid = true];
  TransactionDetails details = 2 [(buf.validate.field).required = true];
  TransactionCommitState commit_state = 3 [(buf.validate.field).required = true];
}

message ListTransactionsRequest {
  string account_id = 1 [(buf.validate.field).required = false, (buf.validate.field).string.uuid = true];
}

message ListTransactionsResponse {
  repeated Transaction transactions = 1;
}