syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.maynestream.ledgify.account";
option java_outer_classname = "AccountProto";

import "buf/validate/validate.proto";

service Account {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc CreditAccount(BalanceAdjustment) returns (AccountBalance);
  rpc DebitAccount(BalanceAdjustment) returns (AccountBalance);
}

message CreateAccountRequest {
  string customer_id = 1 [(buf.validate.field).string.uuid = true];
  int32 ledger_id = 2 [(buf.validate.field).int32.gt = 0];
  string currency = 3 [(buf.validate.field).string.len = 3];
}

message CreateAccountResponse {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message BalanceAdjustment {
  string account_id = 1 [(buf.validate.field).string.uuid = true];
  string amount = 2 [(buf.validate.field) = { string: { pattern: "^[\\d]+[\\.]?[\\d]*$" }, ignore_empty: false }];
}

message AccountBalance {
  string account_id = 1 [(buf.validate.field).string.uuid = true];
  string currency = 3 [(buf.validate.field).string.len = 3];
  string balance = 2 [(buf.validate.field) = { string: { pattern: "^[\\d]+[\\.]?[\\d]*$" }, ignore_empty: false }];
}